# SyncroLWS

./: .gitignore  IMPLEMENTATION.md  README.md  package-lock.json  package.json  tsconfig.base.json
apps/backend/: .env.example  Dockerfile  docker-compose.yml  drizzle.config.ts  entrypoint.sh  package.json  run-migrations.sh  tsconfig.json
apps/backend/drizzle/: 0000_phase_h_auth.sql  0001_phase_i_sync.sql  0002_phase_m_share_scope.sql  0003_phase_p_users.sql  0004_phase_q_workspace_acl.sql  0005_phase_r_audit.sql
apps/backend/src/: audit.ts  auth.ts  bootstrap.ts  index.ts  trpc.ts
apps/backend/src/config/: env.ts
apps/backend/src/db/: client.ts  schema.ts
apps/backend/src/routes/: audit.ts  auth.ts  portal.ts  share-admin.ts  sync.ts  trpc.ts  upload.ts  workspaces.ts
apps/backend/src/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/drizzle/: 0000_init.sql
apps/desktop/drizzle/meta/: 0000_snapshot.json  _journal.json
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/desktop/src/core/: admin.ts  ai.ts  auth.ts  backup.ts  config.ts  db.ts  deep-link.ts  entityStore.ts  events.ts  lock.ts  powersync.ts  sharing.ts  sync.ts  workspaceIO.ts
apps/desktop/src/db/: schema.ts
apps/desktop/src/lib/: utils.ts
(+92 files in other folders)
