[package]
name = "syncrohws"
version = "0.1.0"
description = "SyncroLWS — offline-first business management system"
authors = ["AlexsProGrammer"]
license = "MIT"
repository = "https://github.com/AlexsProGrammer/SyncroLWS"
edition = "2021"
rust-version = "1.78"

[lib]
name = "syncrohws_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri                  = { version = "2.0", features = ["protocol-asset", "devtools"] }
tauri-plugin-sql       = { version = "2.0", features = ["sqlite"] }
tauri-plugin-fs        = { version = "2.0" }
tauri-plugin-deep-link = { version = "2.0" }
tauri-plugin-shell     = { version = "2.0" }
serde                  = { version = "1", features = ["derive"] }
serde_json             = "1"

[features]
# None currently — feature flags will be added per platform requirement

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = true
